2012-05-25  Tony Chang  <tony@chromium.org>

        implement new negative flexing algorithm
        https://bugs.webkit.org/show_bug.cgi?id=86528

        Reviewed by Ojan Vafai.

        * css3/flexbox/flex-algorithm-expected.txt:
        * css3/flexbox/flex-algorithm.html:

2012-05-25  Mihai Parparita  <mihaip@chromium.org>

        Allow synchronous XHRs to be disabled in documents
        https://bugs.webkit.org/show_bug.cgi?id=87540

        Reviewed by Eric Seidel.

        Synchronous XMLHttpRequests are a problematic API, since they result
        in blocked UI threads. Some clients may wish to always disable them;
        give them a setting to do so (see also r103629 for other cases where
        synchronous XHRs are disabled).

        * fast/xmlhttprequest/xmlhttprequest-sync-disabled-expected.txt: Added.
        * fast/xmlhttprequest/xmlhttprequest-sync-disabled.html: Added.

2012-05-25  Stephanie Lewis  <slewis@apple.com>

        Unreviewed, fix bad copy/paste.

        * platform/mac/Skipped:

2012-05-25  Stephanie Lewis  <slewis@apple.com>

        See https://bugs.webkit.org/show_bug.cgi?id=87558

        Unreviewed, checking in expected failing results.

        * platform/mac/http/tests/security/contentSecurityPolicy/inline-script-blocked-javascript-url-expected.txt: Added.
        * platform/mac/http/tests/security/contentSecurityPolicy/javascript-url-blocked-expected.txt: Added.

2012-05-25  Stephanie Lewis  <slewis@apple.com>

        See https://bugs.webkit.org/show_bug.cgi?id=87544

        Unreviewed, skipping asserting test 

        * platform/mac/Skipped:

2012-05-25  Lynn Neir  <lynn.neir@skype.net>

        Updated tests as a result of implementing TextInputController in DRT for windows, https://bugs.webkit.org/show_bug.cgi?id=32021

        Reviewed by Eric Seidel.

        * platform/win/Skipped:
        * platform/win/editing/selection/5825350-1-expected.txt: Added.